test/fail/french.fx
package javafx.ui;

import org.jdesktop.layout.GroupLayout;

/**
 * @author jclarke
 */

public class Alignment {
    public attribute name: String;
    public attribute id:Number;
    
    public static attribute LEADING = Alignment{name:"LEADING" id: org.jdesktop.layout.GroupLayout.LEADING};
}
